plugins {
    id 'java'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(25)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.junit.jupiter:junit-jupiter-api:5.10.2'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.2'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher:1.10.2'
    // JMH
    implementation 'org.openjdk.jmh:jmh-core:1.37'
    annotationProcessor 'org.openjdk.jmh:jmh-generator-annprocess:1.37'
    testAnnotationProcessor 'org.openjdk.jmh:jmh-generator-annprocess:1.37'
    // JSON
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.1'
}

test {
    useJUnitPlatform()
    jvmArgs '--enable-preview'

    test {
        systemProperty "burst.enabled", "true"
    }

    testLogging {
        showStandardStreams = true
        events "passed", "failed", "skipped"
    }
    exclude '**/*_jmhType*.class'
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += '--enable-preview'
}
